# self-tutorials

./: raspi-setup.md
opencv-cmake/: CMakeLists.txt  README.md  main.cpp
raspi-setup/: README.md
rust-msp430/: rust-on-msp430.md
